--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==2.1.0
-firebase-admin==5.0.2
-requests==2.26.0
-html-testRunner==1.2.1
+Flask
+firebase-admin
+requests
+html-testRunner
 pytest
-Flask-RESTPlus==0.13.0
-PyYAML==6.0.1
-flasgger==0.9.7.1
+Flask-RESTPlus
+PyYAML
+flasgger
 flask-restx
 Flask-Caching
 gunicorn
